# QtApp5

./: .qmlls.ini  CMakeLists.txt  MyResources.qrc  main.cpp
.cache/clangd/index/: CameraService.h.4E730BC51A95425F.idx  FirebaseAuth.h.0235B37F5537F1D0.idx  LoginViewModel.h.F7BA70105347B165.idx  MainViewModel.h.CC3D30644440200F.idx  QRCodeData.h.A43D7F8CAF31D19A.idx  QRCodeModel.h.87F2E9984546FF04.idx  QRCodeService.h.E30746AD7E73A33F.idx  QRScannerViewModel.h.D74C1AC97B837A14.idx  UserModel.h.8FA440EBBBF8157B.idx
.qtcreator/: project.json.qtds
Models/: QRCodeData.cpp  QRCodeData.h  QRCodeModel.cpp  QRCodeModel.h  UserModel.cpp  UserModel.h
Repositories/: FirebaseAuth.cpp  FirebaseAuth.h
Services/: CameraService.cpp  CameraService.h  QRCodeService.cpp  QRCodeService.h
ViewModels/: LoginViewModel.cpp  LoginViewModel.h  MainViewModel.cpp  MainViewModel.h  QRScannerViewModel.cpp  QRScannerViewModel.h
Views/: LoginView.qml  MainView.qml  QRScannerView.qml  qmldir
codeql-custom-queries-cpp/: codeql-pack.yml
